# bumgr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml  update-formula.yml
bumgr/: __init__.py  backup.py  config.py  executable.py
bumgr/contrib/: __init__.py  power.py  tailscale.py
etc/: de.3j14.bumgr.plist
tests/: conftest.py  test_backup_config.py  test_config.py  test_tailscale.py
